Highlight selected pattern

--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -16,6 +16,10 @@ button:hover .patternImage {
 	transform: scale(1.03);
 }
 
+.patternImage.active {
+	transform: scale(1.03);
+}
+
 .legendGradient.Temperature {
 	background: linear-gradient(
 		to right,
